# coding-assistant

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yaml
bugs/: README.md  bun.lockb  package.json
bugs/src/: index.ts  rl.ts
bugs/src/commands/: extract.ts  index.ts  review.ts
libraries/: embeddings.py  git_client.py  weaviate_client.py
libraries/llama_helpers/: code_splitter.py
libraries/utils/: helpers.py  io.py  language.py
notebooks/: parsing-ast.ipynb  semantinc-search-repo-code-joey.ipynb  semantinc-search-repo-code.ipynb  semantinc-search-repo-commits.ipynb
src/: ask_repo.py  chat.py  cli.py  summariser.py
tests/: ask_repo_test.py
