[tool.poetry]
name = "coding-assistant"
version = "0.1.0"
description = ""
authors = ["mallikarjun-br <93917885+mallikarjun-br@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-index-llms-ollama = "^0.1.5"
llama-index = "^0.10.53"
llama-index-embeddings-huggingface = "^0.1.1"
jupyter = "^1.0.0"
python-git = "^2018.2.1"
gitpython = "^3.1.43"
weaviate-client = "^4.6.5"
ollama = "^0.2.1"
sentence-transformers = "=2.2.2"
chardet = "^5.2.0"
instructorembedding = "^1.0.1"
torch = "2.2.2"
aider-chat = "^0.50.1"
pygments = "^2.18.0"
pathspec = "^0.12.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
